Fix z-index of altitude graph

--- a/geotrek/static/style.css
+++ b/geotrek/static/style.css
@@ -159,6 +159,7 @@ span.aggregation {
     border: 1px solid #d4d4d4;
     padding: 5px;
     width: 30%;
+    z-index: 1000;
 }
 
 #altitudegraph h4 {
